--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -10,15 +10,15 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-      - run: docker build -t AnapiDappa/reacttest -f ./client/Dockerfile.dev ./client
-      - run: docker run -e CI=true AnapiDappa/reacttest npm test
+      - run: docker build -t anapimapla/reacttest -f ./client/Dockerfile.dev ./client
+      - run: docker run -e CI=true anapimapla/reacttest npm test
 
-      - run: docker build -t AnapiDappa/multi-client ./client
-      - run: docker build -t AnapiDappa/multi-nginx ./nginx
-      - run: docker build -t AnapiDappa/multi-server ./server
-      - run: docker build -t AnapiDappa/multi-worker ./worker
+      - run: docker build -t anapimapla/multi-client ./client
+      - run: docker build -t anapimapla/multi-nginx ./nginx
+      - run: docker build -t anapimapla/multi-server ./server
+      - run: docker build -t anapimapla/multi-worker ./worker
 
-      - run: docker push AnapiDappa/multi-client
-      - run: docker push AnapiDappa/multi-nginx
-      - run: docker push AnapiDappa/multi-server
-      - run: docker push AnapiDappa/multi-worker
+      - run: docker push anapimapla/multi-client
+      - run: docker push anapimapla/multi-nginx
+      - run: docker push anapimapla/multi-server
+      - run: docker push anapimapla/multi-worker
